--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <br>
             <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
         </fieldset>
+        Want to see <a href="Mobile Compatible.html">Mobile Compatible</a>
     </div>
 </body>
 </html>
